...
                                                </subviews>
                                            </stackView>
                                            <stackView opaque="NO" contentMode="scaleAspectFit" distribution="fillEqually" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="Qsh-cP-RXg" userLabel="Add/Remove">
                                                <rect key="frame" x="8" y="127" width="351" height="92"/>
                                                <subviews>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eTc-Q1-3hc">
                                                        <rect key="frame" x="0.0" y="0.0" width="169.66666666666666" height="92"/>
                                                        <state key="normal" image="Add new"/>
                                                        <connections>
                                                            <segue destination="gG6-fa-ZRB" kind="presentation" id="bty-bC-hOT"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7P4-UW-1en" userLabel="MedSched">
                                                <rect key="frame" x="33" y="558" width="311" height="107"/>
                                                <state key="normal" image="Full med schedule"/>
                                            </button>
                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="myMeds" translatesAutoresizingMaskIntoConstraints="NO" id="fcV-TO-b33">
...
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Medication Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="d83-Th-mr4">
                                                        <rect key="frame" x="0.0" y="61" width="343" height="40"/>
                                                        <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                            <button opaque="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kPS-Rp-Czm" userLabel="Mon Button">
                                                                <rect key="frame" x="0.0" y="0.0" width="96" height="73"/>
                                                                <state key="normal" image="monday">
                                                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                                                </state>
...
                                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TAe-FJ-6qa" userLabel="Mon Button">
                                                                <rect key="frame" x="116" y="0.0" width="97.333333333333314" height="73"/>
                                                                <state key="normal" image="tuesday">
                                                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                                                </state>
...
                                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XCd-TZ-LKO" userLabel="Mon Button">
                                                                <rect key="frame" x="233.33333333333334" y="0.0" width="109.66666666666666" height="73"/>
                                                                <state key="normal" image="wednesday">
                                                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                                                </state>
...
                                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="se0-bk-bcP" userLabel="Mon Button">
                                                                <rect key="frame" x="0.0" y="0.0" width="81.666666666666671" height="73"/>
                                                                <state key="normal" image="thursday">
                                                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                                                </state>
...
                                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sHf-Gq-oUc" userLabel="Mon Button">
                                                                <rect key="frame" x="86.666666666666657" y="0.0" width="81.666666666666657" height="73"/>
                                                                <state key="normal" image="friday">
                                                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                                                </state>
...
                                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SOM-Te-URA" userLabel="Mon Button">
                                                                <rect key="frame" x="173.33333333333334" y="0.0" width="81.666666666666657" height="73"/>
                                                                <state key="normal" image="saturday">
                                                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                                                </state>
...
                                                            <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wfs-v2-VVa" userLabel="Mon Button">
                                                                <rect key="frame" x="260" y="0.0" width="83" height="73"/>
                                                                <state key="normal" image="sunday">
                                                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
