...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Menu BG" translatesAutoresizingMaskIntoConstraints="NO" id="f9i-cB-rxW">
                                <rect key="frame" x="0.0" y="-20" width="414" height="120"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                                <rect key="frame" x="10" y="140" width="388" height="786"/>
                                                <subviews>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8Hu-fa-fNT">
                                                        <rect key="frame" x="0.0" y="0.0" width="388" height="44"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                        <textInputTraits key="textInputTraits"/>
                                                    </textField>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ue0-rH-iJE">
                                                        <rect key="frame" x="0.0" y="74" width="388" height="44"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                        <textInputTraits key="textInputTraits"/>
                                                    </textField>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TGq-uN-J79">
                                                        <rect key="frame" x="0.0" y="148" width="388" height="44"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                        <textInputTraits key="textInputTraits"/>
                                                    </textField>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Date of Birth" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oi8-mM-7WF">
                                                        <rect key="frame" x="0.0" y="222" width="388" height="44"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                        <textInputTraits key="textInputTraits"/>
                                                    </textField>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Cell" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ttY-6f-Gm5" userLabel="CellTF">
                                                        <rect key="frame" x="0.0" y="296" width="388" height="44"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                        <textInputTraits key="textInputTraits"/>
                                                    </textField>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Gender" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lLh-xY-4dd">
                                                        <rect key="frame" x="0.0" y="370" width="388" height="44"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                        <textInputTraits key="textInputTraits"/>
                                                    </textField>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="M2c-9N-Nlf">
                                                        <rect key="frame" x="0.0" y="444" width="388" height="44"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
...
                                                                    <constraint firstAttribute="height" constant="120" id="v8s-Ai-LeV"/>
                                                                </constraints>
                                                                <state key="normal" title="Back Button" image="Back"/>
                                                                <connections>
                                                                    <action selector="backTapped:" destination="nUH-z1-xzu" eventType="touchUpInside" id="YOX-5b-hKE"/>
...
                                                                    <constraint firstAttribute="height" constant="120" id="cgf-9P-s24"/>
                                                                </constraints>
                                                                <state key="normal" title="Save Button" image="Add-1"/>
                                                                <connections>
                                                                    <action selector="saveTapped:" destination="nUH-z1-xzu" eventType="touchUpInside" id="KKl-U8-927"/>
...
